# Lumia-Royale-Ecommerce

./: README.md  backup.json  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
loja/: settings.py  urls.py
pedidos/: admin.py  models.py  views.py
pedidos/migrations/: 0001_initial.py  0002_itempedido_variacao_pedido_qtd_total_and_more.py  0003_alter_itempedido_variacao.py
perfil/: models.py  urls.py  views.py
perfil/migrations/: 0001_initial.py  0002_alter_perfil_endereco_alter_perfil_numero_and_more.py
produtos/: admin.py  forms.py  models.py  urls.py  views.py
produtos/migrations/: 0001_initial.py  0002_alter_produto_imagem_variacao.py  0003_alter_variacao_options_alter_produto_tipo.py  0004_alter_produto_slug.py  0005_alter_produto_descricao_curta_and_more.py
produtos/templates/produto/: carrinho.html  detalhe.html  lista.html
produtos/templatetags/: omfilters.py
static/assets/custom/css/: style.css
templates/: base.html
templates/parciais/: _carrinho.html  _footer.html  _nav.html
templates/static/assets/custom/css/: style.css
utils/: utils.py  vercel.json
