[tool.poetry]
name = "meu-ecommerce"
version = "0.1.0"
description = "E-commerce site built with Django"
authors = ["MariaBergmann <162642619+MariaBergmann@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
gunicorn = "^21.2"
whitenoise = "^6.5"
psycopg2-binary = "^2.9"
dj-database-url = "^2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"